# EinsteinPuzzles

./: LICENSE  README.md  pyproject.toml
src/: arguments.py  environment.py  game_generator.py  utils.py
src/eval/: eval_base.py  eval_game_raw_model.py  eval_game_verifier_model.py  local_model.py
src/prompt/: selfplay_gpt_cot.py  selfplay_gpt_generate_cot_ask.py  selfplay_gpt_generate_cot_none.py  selfplay_gpt_generate_cot_share.py  selfplay_gpt_generate_cot_share_ask.py  selfplay_llama_ask.py  selfplay_llama_cot_ask.py  selfplay_llama_cot_none.py  selfplay_llama_cot_share.py  selfplay_llama_cot_share_ask.py  selfplay_llama_none.py  selfplay_llama_share.py  selfplay_llama_share_ask.py
src/verifier/: verifier.py
