[project]
name = "einstein-puzzles"
version = "0.1.0"
description = "Einstein Puzzles on Tabletop"
requires-python = "==3.9.*"

dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "transformers==4.51.3",
    "peft==0.15.2",
    "numpy==1.26.4",
    "vllm==0.7.0",
    "tqdm",
]
